--- a/public/hello.html
+++ b/public/hello.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello React!</title>
+    <link rel="stylesheet" href="css/hello.css">
     <script src="scripts/react.min.js"></script>
     <script src="scripts/react-dom.min.js"></script>
     <script src="scripts/browser.min.js"></script>
   </head>
   <body>
     <div id="example"></div>
-    <script type="text/babel">
-      ReactDOM.render(
-        <h1>Hello, world!</h1>,
-        document.getElementById('example')
-      );
-    </script>
+    <div id="hellomessage"></div>
+    <script type="text/babel" src="scripts/helloworld.js"></script>
   </body>
 </html>
