react basic demo

--- a/public/hello.html
+++ b/public/hello.html
@@ -7,10 +7,18 @@
     <script src="scripts/react.min.js"></script>
     <script src="scripts/react-dom.min.js"></script>
     <script src="scripts/browser.min.js"></script>
+    <script src="scripts/jquery-1.10.2.js"></script>
   </head>
   <body>
     <div id="example"></div>
     <div id="hellomessage"></div>
+    <div id="nodeslist"></div>
+    <div id="hellotitle"></div>
+    <div id="vd"></div>
+    <div id="likebutton"></div>
+    <div id="myinput"></div>
+    <div id="hello"></div>
+    <div id="repos"></div>
     <script type="text/babel" src="scripts/helloworld.js"></script>
   </body>
 </html>
